--- a/KeyRingApp/KeyRingApp/Views/PasswordPage.xaml
+++ b/KeyRingApp/KeyRingApp/Views/PasswordPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="KeyRingApp.Views.LoginPage">
+             x:Class="KeyRingApp.Views.PasswordPage"
+             BackgroundImage="postit.png">
     <ContentPage.Resources>
         <ResourceDictionary>
             <Style x:Key="plainButton" TargetType="Button">
@@ -13,33 +14,23 @@
                 <Setter Property="FontSize" Value="24" />
                 <Setter Property="FontAttributes" Value="Bold" />
             </Style>
+            <OnPlatform x:TypeArguments="x:String" x:Key="NormalFont">
+                <On Platform="Android" Value="TragicMarker.otf#TragicMarker" />
+                <On Platform="iOS" Value="TragicMarker" />
+            </OnPlatform>
         </ResourceDictionary>
     </ContentPage.Resources>
     <ContentPage.Content>
         <StackLayout>
-
             <StackLayout x:Name="LogoStack" VerticalOptions="Fill">
 
                 <Image x:Name="Icon" Source="icon.png" Margin="0,20,0,0" />
             </StackLayout>
-            <StackLayout x:Name="LoginEntriesStack" VerticalOptions="StartAndExpand">
-                <StackLayout.Padding>
-                    <OnIdiom x:TypeArguments="Thickness">
-                        <OnIdiom.Phone>40,0,40,0</OnIdiom.Phone>
-                        <OnIdiom.Tablet>140,150,140,0</OnIdiom.Tablet>
-                    </OnIdiom>
-                </StackLayout.Padding>
-                <Label x:Name="Lbl_Username" Text="Username" />
-                <Entry x:Name="Entry_Username" Placeholder="Type Username Here" />
-                <Label x:Name="Lbl_Password" Text="Password" />
-                <Entry x:Name="Entry_Password" Placeholder="Type Password Here" />
-                <Button x:Name="Btn_SignIn" 
-                        Text="Sign In" 
-                        Clicked="Btn_SignIn_Clicked" 
-                        MinimumWidthRequest="400"
-                        MinimumHeightRequest="100"
-                        Style="{StaticResource plainButton}"/>
-            </StackLayout>
+            <Label x:Name="lbl_Password" 
+                   FontFamily="{StaticResource NormalFont}"
+                   VerticalOptions="CenterAndExpand"
+                   HorizontalOptions="CenterAndExpand"
+                   />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
