--- a/KeyRingApp/KeyRingApp/Views/RandomQuestion.xaml
+++ b/KeyRingApp/KeyRingApp/Views/RandomQuestion.xaml
@@ -3,18 +3,48 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="KeyRingApp.Views.RandomQuestion"
              Title="Security Question">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style x:Key="plainButton" TargetType="Button">
+                <Setter Property="BackgroundColor" Value="SlateBlue" />
+                <Setter Property="BorderColor" Value="Blue" />
+                <Setter Property="BorderWidth" Value="4" />
+                <Setter Property="TextColor" Value="White" />
+                <Setter Property="CornerRadius" Value="30" />
+                <Setter Property="FontSize" Value="24" />
+                <Setter Property="FontAttributes" Value="Bold" />
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+    
     <ContentPage.Content>
         <StackLayout>
-            <StackLayout x:Name="LogoStack" VerticalOptions="FillAndExpand">
+
+            <StackLayout x:Name="LogoStack" VerticalOptions="Fill">
 
                 <Image x:Name="Icon" Source="icon.png" Margin="0,20,0,0" />
             </StackLayout>
-            <Label x:Name="RandQuestion"
+            <StackLayout x:Name="LoginEntriesStack" VerticalOptions="StartAndExpand">
+                <StackLayout.Padding>
+                    <OnIdiom x:TypeArguments="Thickness">
+                        <OnIdiom.Phone>40,0,40,0</OnIdiom.Phone>
+                        <OnIdiom.Tablet>140,150,140,0</OnIdiom.Tablet>
+                    </OnIdiom>
+                </StackLayout.Padding>
+                <Label x:Name="RandQuestion"
                     VerticalOptions="CenterAndExpand" 
                     HorizontalOptions="CenterAndExpand" />
-            <Entry x:Name="Q_Answer" />
-            <Button x:Name="Btn_SubmitAnswer"
-                    Text="Submit" />
+                <Entry x:Name="Q_Answer" />
+                <Button x:Name="Btn_SubmitAnswer"
+                        Text="Submit"
+                        Style="{StaticResource plainButton}"
+                        MinimumWidthRequest="400"
+                        MinimumHeightRequest="100"
+                        FontAttributes="Bold" 
+                        FontSize="Large"
+                        Clicked="Btn_SubmitAnswer_Clicked"/>
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
+
 </ContentPage>
